deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework1-app
  template:
    metadata:
      labels:
        app: homework1-app
    spec:
      containers:
        - name: homework1
          image: adelka1009/homework1:v1
          ports:
            - name: web
              containerPort: 8080
