deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework1-service
spec:
  selector:
    app: homework1-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8080
  type: NodePort
